Bug 141904 - Opening Data Provider leads to Application CRASH
Summary: Opening Data Provider leads to Application CRASH
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Tushar Kumar Rai
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2021-04-26 08:00 UTC by Tushar Kumar Rai
Modified: 2021-05-13 12:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb backtrace (59.15 KB, image/png)
2021-04-26 08:00 UTC, Tushar Kumar Rai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Kumar Rai 2021-04-26 08:00:41 UTC
Created attachment 171408 [details]
gdb backtrace

Data Provider was removed in the commit https://git.libreoffice.org/core/+/24939a5b43b9fe889c3aace027c668666ff61987%5E%21 since UI was not ready.

Steps to Reproduce the crash :
1. Revert the above mentioned commit locally in your system.
2. Go to Data and select Data Provider.

Expected Result : Data Provider window should open up.
Actual Result : CRASH.

The crash is after the commit https://git.libreoffice.org/core/+/9bba5f418d4900ba20503dd1d310b3ff68bb14df%5E%21 .
Comment 1 Commit Notification 2021-04-28 18:45:38 UTC
tushar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e66b30d9287b418bed35400c77b257b97cf26ec

tdf#141904 Blue row number for autofilter only when pTab is not NULL.

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.