tdf#141904 Blue row number for autofilter only when pTab is not NULL.

Change-Id: Ibdf1efbff34bc58912a5a776d47ccfd784d3111e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114647
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>